2008-01-19  Johan Dahlin  <johan@gnome.org>

	* gio/gio.override (_wrap_g_output_stream_write): Impl.
	* gio/gio.override:
	* gio/unix.defs:
	Add GUnixInputStream type and methods

	* tests/common.py:
	* tests/test_gio.py:
	Add GIO tests.

	* gio/gio.override (_wrap_g_app_info_get_all_for_type),
	(_wrap_g_app_info_get_all),
	(_wrap_g_drive_get_volumes): Implement.

	* gio/gio.override (async_result_callback_marshal): New marshaller
	for async results
	(_wrap_g_input_stream_read_async): Impl.
	* gio/gio-types.defs: Add SimpleAsyncRequest
	* gio/giomodule.c: Register enums/constants

	* gio/gio.override: Fix a silly bug so it possible to read files 
	larger than 8192 bytes.

	* gio/gio.defs: Set null-ok for all cancelable as well.

	* gio/__init__.py: set gio.unix to None if it's not available

	* gio/gio.override: Implement InputStream.read efficiently without
	copying the strings, based on the standard libararys file.read() 
	implementation.

	* gio/gio-types.defs (Cancellable): Add wrapper.

	* gio/gio.defs (replace): Do not require cancellable argument 
	to be specified, default to NULL if not.

	* Makefile.am:
	* codegen/Makefile.am:
	* codegen/README.defs:
	* codegen/__init__.py:
	* codegen/argtypes.py:
	* codegen/code-coverage.py:
	* codegen/codegen.py:
	* codegen/createdefs.py:
	* codegen/definitions.py:
	* codegen/defsconvert.py:
	* codegen/defsgen.py:
	* codegen/defsparser.py:
	* codegen/docextract.py:
	* codegen/docextract_to_xml.py:
	* codegen/docgen.py:
	* codegen/h2def.py:
	* codegen/mergedefs.py:
	* codegen/missingdefs.py:
	* codegen/mkskel.py:
	* codegen/override.py:
	* codegen/pygtk-codegen-2.0.in:
	* codegen/reversewrapper.py:
	* codegen/scanvirtuals.py:
	* codegen/scmexpr.py:

	* configure.ac:
	* gio/Makefile.am:
	* gio/__init__.py:
	* gio/gio-types.defs:
	* gio/gio.defs:
	* gio/gio.override:
	* gio/giomodule.c: (init_gio):
	* gio/unix-types.defs:
	* gio/unix.defs:
	* gio/unix.override:
	* gio/unixmodule.c: (initunix):

	Import codegen from pygtk.