@@ -1,3 +1,11 @@
+2008-01-20  Johan Dahlin  <johan@gnome.org>
+
+	* tests/test_gio.py (TestInputStream.testReadAsyncError): 
+	New function to test error condition of async read.
+
+	* gio/gio.override (async_result_callback_marshal): Grab a reference
+	to callback/data.
+
 2008-01-19  Johan Dahlin  <johan@gnome.org>
 
 	* gio/gio.override (_wrap_g_output_stream_write): Impl.
